--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ frontend/node_modules
 frontend/dist
 frontend/dist-ssr
 frontend/*.local
+frontend/.env
 
 # Backend environment and Python artifacts
 backend/.env
